@@ -4,6 +4,7 @@ polyphone (1.9) unstable; urgency=low
   * (new) tool to export the preset list in a text format
   * (fix) crash with a drag & drop in the tree
   * (fix) release bug when using loop + end mode
+  * (fix) the progress bar sometimes remains when loading a small soundfont
 
  -- Davy Triponney <davy.triponney@gmail.com>  Wed, 16 Nov 2017 17:51:55 +0100
 
